# Nova-Act-sample

./: .gitignore  01_basic_ecommerce.py  02_information_extraction.py  03_parallel_processing.py  04_authentication_demo.py  05_file_operations.py  06_form_filling.py  07_search_filter.py  08_real_estate.py  09_interactive_demo.py  10_advanced_features.py  COMPLETE_BUILD_SUMMARY.md  DEMO_STATUS.md  DEMO_SUMMARY.md  EXECUTION_SUMMARY.md  FAQ.md  FIXES_SUMMARY.md  LICENSE  NOTICE  README.md  STATUS_COMPLETE.md  THIRD_PARTY_NOTICE  VIETNAM_MARKET_SUMMARY.md  VIETNAM_TEST_RESULTS.md  basic_test.py  browser_demo.py  complete_demo_suite.py  debug_test.py  demo_simulation.py  detailed_demo.py  ecommerce_demo.py  fixed_demo.py  headless_test.py  minimal_test.py  network_test.py  pyproject.toml  requirements.txt  run_all_demos.py  run_demo1.py  run_demo2.py  (+6 more)
demo_framework/: __init__.py  base_demo.py  config_manager.py  error_handler.py  logger.py  multi_selector.py
samples/: README.md  README_VIETNAM.md  quick_start.py  requirements.txt
samples/automation/: form_automation.py
samples/data_extraction/: job_market_analyzer.py  news_aggregator.py  vietnam_job_market_analyzer.py  vietnam_news_aggregator.py
samples/ecommerce/: competitor_analysis.py  product_price_monitor.py  vietnam_competitor_analysis.py  vietnam_price_monitor.py
samples/real_estate/: property_market_analyzer.py  vietnam_property_analyzer.py
samples/research/: academic_research_assistant.py
samples/testing/: web_app_tester.py
src/nova_act/: __init__.py  __version__.py  nova_act.py
(+93 files in other folders)
